Allow theming of chart colors (#478471) Patch from Baris Cicek
2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-properties-window.c:
	Allow theming of chart colors (#478471)
	Patch from Baris Cicek


svn path=/trunk/; revision=13813

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
+        * src/file-manager/fm-properties-window.c:
+	Allow theming of chart colors (#478471)
+	Patch from Baris Cicek
+
+2008-02-25  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file.c (is_uri_relative):
 	g_uri_get_scheme -> g_uri_parse_scheme
 
