--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
+        * src/file-manager/fm-properties-window.c:
+	Don't show permissions for computer.
+	Make "open with tab" consistent for computer and trash.
+	Patch from Cosimo Cecchi (#518131)
+
+2008-02-25  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-window-manage-views.c:
         (got_file_info_for_view_selection_callback):
 	Fix NautilusFile leak.
