--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-25  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation by Joan Duran.
+
 2008-02-24  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Brazilian Portuguese translation updated by Vladimir Melo
