Show dialog on autorun errors
2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-autorun-software.c:
	Show dialog on autorun errors



svn path=/trunk/; revision=13819

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-autorun-software.c:
+	Show dialog on autorun errors
+
+2008-02-25  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-properties-window.c:
 	Don't show permissions for computer.
 	Make "open with tab" consistent for computer and trash.
