Update for release
2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
	


svn path=/trunk/; revision=13820

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+	
+2008-02-25  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-autorun-software.c:
 	Show dialog on autorun errors
 
