--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+Major changes in 2.21.92 are:
+* Build fixes
+* Fix crashes and leaks
+* Fix handling of desktop file launchers
+* Better handling of desktop file icons
+* Semitransparent DnD icon support (when composited)
+* Avoid showing progress info when dialogs are shown
+* Allow minimize of progress window
+* Handle beagle >= 0.3.0
+* Close properties dialog on escape
+* Make custom icons work again
+* Fix fuzzy icons
+* Duplicate file if copies to the source directory
+* Support open with dialog for multiple selected files
+* Ressurect connect to server dialog
+* Allow theming of free diskspace chart colors
+
 Major changes in 2.21.91 are:
 * String cleanups
 * Inhibit autorun for things we mount ourselves
