Post release version bump
2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.21.92 ===


svn path=/trunk/; revision=13823

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump
+
+=== nautilus 2.21.92 ===
+
+2008-02-25  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Require glib 2.15.6
 
 	* NEWS:
