--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-26  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 === nautilus 2.21.92 ===
 
 2008-02-25  Gil Forcada  <gforcada@gnome.org>
