Fix typo in string
2008-02-26  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-autorun-software.c (autorun):
	Fix typo in string



svn path=/trunk/; revision=13826

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-26  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-autorun-software.c (autorun):
+	Fix typo in string
+
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
