--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-26  Luca Ferretti  <elle.uca@libero.it>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+	Restore the removed connect to server files
+
 2008-02-26  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
