--- a/po/sv.po
+++ b/po/sv.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-26 08:54+0100\n"
-"PO-Revision-Date: 2008-02-26 08:58+0100\n"
+"POT-Creation-Date: 2008-02-26 11:29+0100\n"
+"PO-Revision-Date: 2008-02-26 11:29+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -2828,6 +2828,7 @@ msgstr[1] "Detta kommer att öppna %'d separata fönster."
 
 #: ../src/file-manager/fm-directory-view.c:1065
 #: ../src/file-manager/fm-properties-window.c:4918
+#: ../src/nautilus-connect-server-dialog.c:357
 #: ../src/nautilus-location-dialog.c:111
 msgid "There was an error displaying help."
 msgstr "Det inträffade ett fel vid visande av hjälp."
@@ -2849,6 +2850,7 @@ msgid "Search _name:"
 msgstr "Sök _namn:"
 
 #: ../src/file-manager/fm-directory-view.c:1244
+#: ../src/nautilus-connect-server-dialog.c:534
 msgid "_Folder:"
 msgstr "_Mapp:"
 
@@ -4331,10 +4333,6 @@ msgid "Cannot find the autorun program"
 msgstr "Kan inte hitta autostartprogrammet"
 
 #: ../src/nautilus-autorun-software.c:165
-msgid "<big><b>Error autorunnning software</b></big>"
-msgstr "<big><b>Fel vid automatisk start av programvara</b></big>"
-
-#: ../src/nautilus-autorun-software.c:165
 msgid "<big><b>Error autorunning software</b></big>"
 msgstr "<big><b>Fel vid automatisk start av programvara</b></big>"
 
@@ -4384,6 +4382,111 @@ msgstr "<b>_Namn</b>"
 #: ../src/nautilus-bookmarks-window.glade.h:4
 msgid "Edit Bookmarks"
 msgstr "Redigera bokmärken"
+
+#: ../src/nautilus-connect-server-dialog-main.c:78
+#, c-format
+msgid "Can't display location \"%s\""
+msgstr "Kan inte visa platsen \"%s\""
+
+#: ../src/nautilus-connect-server-dialog-main.c:118
+msgid "[URI]"
+msgstr "[URI]"
+
+#. Translators: This is the --help description gor the connect to server app,
+#. the initial newlines are between the command line arg and the description
+#: ../src/nautilus-connect-server-dialog-main.c:129
+msgid ""
+"\n"
+"\n"
+"Add connect to server mount"
+msgstr ""
+"\n"
+"\n"
+"Lägg till anslutning till servermontering"
+
+#: ../src/nautilus-connect-server-dialog.c:124
+msgid "Custom Location"
+msgstr "Anpassad plats"
+
+#: ../src/nautilus-connect-server-dialog.c:126
+msgid "SSH"
+msgstr "SSH"
+
+#: ../src/nautilus-connect-server-dialog.c:129
+msgid "Public FTP"
+msgstr "Publik FTP"
+
+#: ../src/nautilus-connect-server-dialog.c:131
+msgid "FTP (with login)"
+msgstr "FTP (med inloggning)"
+
+#: ../src/nautilus-connect-server-dialog.c:134
+msgid "Windows share"
+msgstr "Windows-utdelning"
+
+#: ../src/nautilus-connect-server-dialog.c:136
+msgid "WebDAV (HTTP)"
+msgstr "WebDAV (HTTP)"
+
+#: ../src/nautilus-connect-server-dialog.c:138
+msgid "Secure WebDAV (HTTPS)"
+msgstr "Säker WebDAV (HTTPS)"
+
+#: ../src/nautilus-connect-server-dialog.c:204
+msgid "Can't Connect to Server. You must enter a name for the server."
+msgstr "Kan inte ansluta till servern. Du måste ange ett namn på servern."
+
+#: ../src/nautilus-connect-server-dialog.c:205
+msgid "Please enter a name and try again."
+msgstr "Ange ett namn och försök igen."
+
+#: ../src/nautilus-connect-server-dialog.c:440
+msgid "_Location (URI):"
+msgstr "_Plats (URI):"
+
+#: ../src/nautilus-connect-server-dialog.c:462
+msgid "_Server:"
+msgstr "_Server:"
+
+#: ../src/nautilus-connect-server-dialog.c:481
+msgid "Optional information:"
+msgstr "Valfri information:"
+
+#: ../src/nautilus-connect-server-dialog.c:493
+msgid "_Share:"
+msgstr "_Utdelning:"
+
+#: ../src/nautilus-connect-server-dialog.c:514
+msgid "_Port:"
+msgstr "_Port:"
+
+#: ../src/nautilus-connect-server-dialog.c:554
+msgid "_User Name:"
+msgstr "_Användarnamn:"
+
+#: ../src/nautilus-connect-server-dialog.c:575
+msgid "_Domain Name:"
+msgstr "_Domännamn:"
+
+#: ../src/nautilus-connect-server-dialog.c:607
+msgid "Bookmark _name:"
+msgstr "Bokmärkes_namn:"
+
+#: ../src/nautilus-connect-server-dialog.c:796
+msgid "Connect to Server"
+msgstr "Anslut till server"
+
+#: ../src/nautilus-connect-server-dialog.c:813
+msgid "Service _type:"
+msgstr "_Typ av tjänst:"
+
+#: ../src/nautilus-connect-server-dialog.c:907
+msgid "Add _bookmark"
+msgstr "Lägg till _bokmärke"
+
+#: ../src/nautilus-connect-server-dialog.c:939
+msgid "C_onnect"
+msgstr "_Anslut"
 
 #: ../src/nautilus-emblem-sidebar.c:238
 #, c-format
@@ -6002,6 +6105,8 @@ msgstr "Ställ in zoomnivån på den aktuella vyn"
 msgid "Network"
 msgstr "Nätverk"
 
+#~ msgid "<big><b>Error autorunnning software</b></big>"
+#~ msgstr "<big><b>Fel vid automatisk start av programvara</b></big>"
 #~ msgid "%s %ld of %ld %s"
 #~ msgstr "%s %ld av %ld %s"
 #~ msgid "(%d:%02d:%02d Remaining)"
@@ -6080,62 +6185,14 @@ msgstr "Nätverk"
 #~ msgstr "Denna fil kan inte avmonteras"
 #~ msgid "This file cannot be eject"
 #~ msgstr "Denna fil kan inte matas ut"
-#~ msgid "Can't display location \"%s\""
-#~ msgstr "Kan inte visa platsen \"%s\""
-#~ msgid "[URI]"
-#~ msgstr "[URI]"
-#~ msgid ""
-#~ "\n"
-#~ "\n"
-#~ "Add connect to server mount"
-#~ msgstr ""
-#~ "\n"
-#~ "\n"
-#~ "Lägg till anslutning till servermontering"
-#~ msgid "Custom Location"
-#~ msgstr "Anpassad plats"
-#~ msgid "SSH"
-#~ msgstr "SSH"
-#~ msgid "Public FTP"
-#~ msgstr "Publik FTP"
-#~ msgid "FTP (with login)"
-#~ msgstr "FTP (med inloggning)"
-#~ msgid "Windows share"
-#~ msgstr "Windows-utdelning"
-#~ msgid "WebDAV (HTTP)"
-#~ msgstr "WebDAV (HTTP)"
-#~ msgid "Secure WebDAV (HTTPS)"
-#~ msgstr "Säker WebDAV (HTTPS)"
 #~ msgid "Can't Connect to Server. \"%s\" is not a valid location."
 #~ msgstr "Kan inte ansluta till server. \"%s\" är inte en giltig plats."
-#~ msgid "Can't Connect to Server. You must enter a name for the server."
-#~ msgstr "Kan inte ansluta till servern. Du måste ange ett namn på servern."
-#~ msgid "Please enter a name and try again."
-#~ msgstr "Ange ett namn och försök igen."
 #~ msgid "%s on %s"
 #~ msgstr "%s på %s"
-#~ msgid "_Location (URI):"
-#~ msgstr "_Plats (URI):"
-#~ msgid "_Server:"
-#~ msgstr "_Server:"
-#~ msgid "Optional information:"
-#~ msgstr "Valfri information:"
-#~ msgid "_Share:"
-#~ msgstr "_Utdelning:"
-#~ msgid "_User Name:"
-#~ msgstr "_Användarnamn:"
-#~ msgid "_Domain Name:"
-#~ msgstr "_Domännamn:"
 #~ msgid "_Name to use for connection:"
 #~ msgstr "_Namn att använda på anslutningen:"
-#~ msgid "Connect to Server"
-#~ msgstr "Anslut till server"
-#~ msgid "Service _type:"
-#~ msgstr "_Typ av tjänst:"
 #~ msgid "Browse _Network"
 #~ msgstr "Bläddra i _nätverket"
-#~ msgid "C_onnect"
-#~ msgstr "_Anslut"
 #~ msgid "From:"
 #~ msgstr "Från:"
 #~ msgid "To:"
