--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-26  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
+
 2008-02-26  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
