--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-26  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Brazilian Portuguese translation updated by Vladimir Melo.
+
 2008-02-26  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
