--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2008-02-27 Arangel Angov <arangel@linux.net.mk>
 
         * mk.po: Updated Macedonian translation.
