Updated Occitan translation
svn path=/trunk/; revision=13838

--- a/po/oc.po
+++ b/po/oc.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-19 20:26+0100\n"
-"PO-Revision-Date: 2008-02-19 22:27+0100\n"
+"PO-Revision-Date: 2008-02-26 23:58+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -347,7 +347,7 @@ msgstr ""
 #. http://en.wikipedia.org/wiki/Picture_CD
 #: ../data/nautilus.xml.in.h:22
 msgid "Picture CD"
-msgstr ""
+msgstr "CD d'imatges"
 
 #. see fd.o hal spec
 #: ../data/nautilus.xml.in.h:24
@@ -957,18 +957,24 @@ msgid ""
 "This name can be set if you want a custom name for the home icon on the "
 "desktop."
 msgstr ""
+"Podètz definir aqueste nom se volètz un nom personalizat per l'icòna "
+"del repertòri personal sul burèu."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:109
 msgid ""
 "This name can be set if you want a custom name for the network servers icon "
 "on the desktop."
 msgstr ""
+"Podètz definir aqueste nom se volètz un nom personalizat per l'icòna "
+"dels servidors ret sul burèu."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:110
 msgid ""
 "This name can be set if you want a custom name for the trash icon on the "
 "desktop."
 msgstr ""
+"Podètz definir aqueste nom se volètz un nom personalizat per l'icòna "
+"de la banasta sul burèu."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "Trash icon visible on desktop"
@@ -1064,7 +1070,7 @@ msgstr "Pas d'aplicacion trobada"
 
 #: ../libnautilus-private/nautilus-autorun.c:351
 msgid "Ask what to do"
-msgstr ""
+msgstr "Demandar de que cal far"
 
 #
 #: ../libnautilus-private/nautilus-autorun.c:367
@@ -1158,7 +1164,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-autorun.c:1127
 msgid "_Always perform this action"
-msgstr ""
+msgstr "_Totjorn far aquò"
 
 #. name, stock id
 #. label, accelerator
@@ -1591,25 +1597,25 @@ msgstr "%s (autra còpia)%s"
 #: ../libnautilus-private/nautilus-file-operations.c:357
 #, c-format
 msgid "%s (%'dth copy)%s"
-msgstr ""
+msgstr "%s (%'da còpia)%s"
 
 #. localizers: appended to x1st file copy
 #: ../libnautilus-private/nautilus-file-operations.c:351
 #, c-format
 msgid "%s (%'dst copy)%s"
-msgstr ""
+msgstr "%s (%'da còpia)%s"
 
 #. localizers: appended to x2nd file copy
 #: ../libnautilus-private/nautilus-file-operations.c:353
 #, c-format
 msgid "%s (%'dnd copy)%s"
-msgstr ""
+msgstr "%s (%'dnda còpia)%s"
 
 #. localizers: appended to x3rd file copy
 #: ../libnautilus-private/nautilus-file-operations.c:355
 #, c-format
 msgid "%s (%'drd copy)%s"
-msgstr ""
+msgstr "%s (%'da còpia)%s"
 
 #. localizers: opening parentheses to match the "th copy)" string
 #: ../libnautilus-private/nautilus-file-operations.c:455
@@ -2609,7 +2615,7 @@ msgstr "Servidors ret"
 
 #: ../libnautilus-private/nautilus-icon-container.c:2185
 msgid "The selection rectangle"
-msgstr ""
+msgstr "Lo rectangle de seleccion"
 
 #: ../libnautilus-private/nautilus-icon-dnd.c:907
 msgid "Switch to Manual Layout?"
@@ -4786,7 +4792,7 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:20
 msgid "<b>Executable Text Files</b>"
-msgstr ""
+msgstr "<b>Fichièrs tèxt executables</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:21
 msgid "<b>Folders</b>"
@@ -4822,15 +4828,15 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:29
 msgid "<b>Sound Files</b>"
-msgstr ""
+msgstr "<b>Fichièrs son</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:30
 msgid "<b>Text Files</b>"
-msgstr ""
+msgstr "<b>Fichièrs tèxt</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:31
 msgid "<b>Trash</b>"
-msgstr ""
+msgstr "<b>Banasta</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:32
 msgid "<b>Tree View Defaults</b>"
@@ -4999,7 +5005,7 @@ msgstr "_Format :"
 
 #: ../src/nautilus-file-management-properties.glade.h:75
 msgid "_Music Player:"
-msgstr ""
+msgstr "Legidor de _musica :"
 
 #: ../src/nautilus-file-management-properties.glade.h:76
 msgid "_Never prompt or start programs on media insertion"
@@ -5011,7 +5017,7 @@ msgstr "_Sonque pels fichièrs pus pichons que :"
 
 #: ../src/nautilus-file-management-properties.glade.h:78
 msgid "_Photos:"
-msgstr ""
+msgstr "_Fotografias :"
 
 #: ../src/nautilus-file-management-properties.glade.h:79
 msgid "_Run executable text files when they are opened"
