--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation by Joan Duran.
+
 2008-02-27  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
