Updated Spanish translation
svn path=/trunk/; revision=13844

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-02-27  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Updated Catalan translation by Joan Duran.
