Updated French translation.
2008-02-27  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation.

svn path=/trunk/; revision=13845

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation.
+
 2008-02-27  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
