--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2008-02-27  Claude Paroz  <claude@2xlibre.net>
 
 	* fr.po: Updated French translation.
