Updated Italian translation.
2008-02-28  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

svn path=/trunk/; revision=13848

--- a/po/it.po
+++ b/po/it.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.21.x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-27 21:19+0100\n"
-"PO-Revision-Date: 2008-02-27 21:32+0100\n"
+"PO-Revision-Date: 2008-02-28 13:26+0100\n"
 "Last-Translator: Luca Ferretti <elle.uca@libero.it>\n"
 "Language-Team: Italiano <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -365,7 +365,7 @@ msgstr "Video HD DVD"
 #. http://en.wikipedia.org/wiki/Picture_CD
 #: ../data/nautilus.xml.in.h:22
 msgid "Picture CD"
-msgstr "CD immagini"
+msgstr "Picture CD"
 
 # GNOME-2-22
 #. see fd.o hal spec
@@ -1218,7 +1218,7 @@ msgstr "Apri cartella"
 #: ../src/nautilus-x-content-bar.c:122
 #, c-format
 msgid "Open %s"
-msgstr "Apri %s"
+msgstr "Apri «%s»"
 
 # GNOME-2-22
 #: ../libnautilus-private/nautilus-autorun.c:1076
