--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-28  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-02-27  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
