Use better icon for system tray. (#518644) Patch from Michael Monreal
2008-02-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.c:
	Use better icon for system tray. (#518644)
	Patch from Michael Monreal


svn path=/trunk/; revision=13849

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-28  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-progress-info.c:
+	Use better icon for system tray. (#518644)
+	Patch from Michael Monreal
+
 2008-02-07  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-metafile.c: (metafile_read_state_free):
