Updated Spanish translation
svn path=/trunk/; revision=13853

--- a/po/es.po
+++ b/po/es.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-26 09:23+0000\n"
-"PO-Revision-Date: 2008-02-27 19:28+0100\n"
+"POT-Creation-Date: 2008-02-27 18:29+0000\n"
+"PO-Revision-Date: 2008-02-28 23:19+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1974,7 +1974,7 @@ msgstr "No puede mover el archivo a la papelera. ¿Quiere borrarlo inmediatament
 
 #: ../libnautilus-private/nautilus-file-operations.c:1565
 msgid "The file \"%B\" cannot be moved to the trash."
-msgstr "El archivo «%s» no se puede mover a la papelera."
+msgstr "El archivo «%B» no se puede mover a la papelera."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1788
 msgid "Unable to eject %V"
@@ -3426,7 +3426,7 @@ msgid "Delete all items in the Trash"
 msgstr "Borra todos los elementos en la papelera"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:798
-#: ../src/nautilus-desktop-window.c:251 ../src/nautilus-pathbar.c:1124
+#: ../src/nautilus-desktop-window.c:251 ../src/nautilus-pathbar.c:1127
 #: ../src/nautilus-places-sidebar.c:279
 msgid "Desktop"
 msgstr "Escritorio"
@@ -5143,7 +5143,7 @@ msgid ""
 "console may fix the problem. If not, you can try rebooting the computer or "
 "installing Nautilus again."
 msgstr ""
-"Nautilus no puede usarse ahora. Ejecutar el comando «bonobo-slay» desde la "
+"Nautilus no se puede usar ahora. Ejecutar el comando «bonobo-slay» desde la "
 "consola debería arreglar el problema. Si no, puede intentar reiniciar el "
 "equipo o instalar Nautilus otra vez."
 
@@ -5169,7 +5169,7 @@ msgid ""
 "We have also seen this error when a faulty version of bonobo-activation was "
 "installed."
 msgstr ""
-"Nautilus no se puede utilizar ahora. Ejecutar la orden «bonobo-slay» desde "
+"No se puede usar Nautilus ahora. Ejecutar la orden «bonobo-slay» desde "
 "la consola, podría solucionar el problema. Si no, intente reiniciar el "
 "equipo o instalar Nautilus otra vez.\n"
 "\n"
@@ -5200,7 +5200,7 @@ msgstr ""
 #: ../src/nautilus-application.c:627 ../src/nautilus-application.c:645
 #: ../src/nautilus-application.c:652
 msgid "Nautilus can't be used now, due to an unexpected error."
-msgstr "Nautilus no puede utilizarse ahora debido a un error inesperado."
+msgstr "No se puede usar Nautilus ahora debido a un error inesperado."
 
 # src/nautilus-application.c:379
 #: ../src/nautilus-application.c:628
@@ -5208,7 +5208,7 @@ msgid ""
 "Nautilus can't be used now, due to an unexpected error from Bonobo when "
 "attempting to register the file manager view server."
 msgstr ""
-"Nautilus no puede utilizarse ahora debido a un error inesperado de Bonobo "
+"No se puede usar Nautilus ahora debido a un error inesperado de Bonobo "
 "cuando intentaba registrar el servidor de vistas del administrador de "
 "archivos."
 
@@ -5219,9 +5219,9 @@ msgid ""
 "attempting to locate the factory. Killing bonobo-activation-server and "
 "restarting Nautilus may help fix the problem."
 msgstr ""
-"Nautilus no puede utilizarse ahora debido a un error inesperado de Bonobo "
+"No se puede usar Nautilus ahora debido a un error inesperado de Bonobo "
 "cuando intentaba ubicar la fábrica. Matar bonobo-activation-server y "
-"reinicira Nautilus quizá ayude a arreglar el problema."
+"reiniciar Nautilus quizá ayude a arreglar el problema."
 
 # src/nautilus-application.c:397
 #: ../src/nautilus-application.c:653
@@ -5230,7 +5230,7 @@ msgid ""
 "attempting to locate the shell object. Killing bonobo-activation-server and "
 "restarting Nautilus may help fix the problem."
 msgstr ""
-"Nautilus no puede utilizarse ahora debido a un error inesperado de Bonobo "
+"No se puede usar Nautilus ahora debido a un error inesperado de Bonobo "
 "cuando intentaba encontrar el objeto shell. Matar bonobo-activation-server y "
 "reiniciar Nautilus quizá ayude a arreglar el problema."
 
@@ -6381,7 +6381,7 @@ msgstr "Mostrar notas"
 #: ../src/nautilus-places-sidebar.c:1589
 #, c-format
 msgid "Unable to poll %s for media changes"
-msgstr "No se pudo sondear %s para cambios en los medios"
+msgstr "No se pudo sondear %s para cambios en los soportes"
 
 # src/file-manager/fm-directory-view.c:2126
 #: ../src/nautilus-places-sidebar.c:1685
