--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 
+
+* es.po: Updated Spanish translation  
+
 2008-02-28  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
