Updated Italian translation.
2008-02-29  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

svn path=/trunk/; revision=13857

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2008-02-29  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-02-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 
 
-* es.po: Updated Spanish translation  
+	* es.po: Updated Spanish translation  
 
 2008-02-28  Hendrik Richter  <hendrikr@gnome.org>
 
